revisão prompt + alert

--- a/ex001/ex1_8.html
+++ b/ex001/ex1_8.html
@@ -9,6 +9,12 @@
     
 </body>
 <script>
-    
+    // Lê um número
+    var num = Number(prompt("Número: "))
+    // Calcula vizinhos 
+    var anterior = num - 1
+    var posterior = num + 1
+    // exibe resposta
+    alert(`Vizinhos: ${anterior} e ${posterior}`)
 </script>
 </html>
